--- a/views/shop.html
+++ b/views/shop.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add product</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
-            </ul>
-
-        </nav>
+    <link rel="stylesheet" href="/css/main.css" />
+    <title>Add Product</title>
+  </head>
+  <body>
+    <header class="main-header">
+      <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+          <li class="main-header__item">
+            <a href="/admin/add-product">Add product</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-       <h1>My products</h1>
-       <p>list of add the products</p> 
+      <h1>My products</h1>
+      <p>List of all the products ...</p>
     </main>
 </body>
 </html>
