--- a/lab03/views/add-product.pug
+++ b/lab03/views/add-product.pug
@@ -9,4 +9,4 @@ block content
       .form-control
         label(for='title') Title
         input#title(type='text' name='title')
-        button(type='submit') Add product Dat
+        button(type='submit') Add product 
