--- a/lab03/public/css/forms.css
+++ b/lab03/public/css/forms.css
@@ -18,3 +18,11 @@
 .form-control input:focus {
     outline-color: #00695c;
 }
+button {
+ background-color: #00695c;  
+ color: white 
+}
+ button:hover {
+color: #ffeb3b;
+
+}
