redering the production detail

--- a/lab04/public/css/main.css
+++ b/lab04/public/css/main.css
@@ -50,7 +50,9 @@ form {
   text-decoration: none;
   color: white;
 }
-
+.centered{
+  text-align: center;
+}
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
