--- a/lab04/views/shop/cart.ejs
+++ b/lab04/views/shop/cart.ejs
@@ -9,7 +9,8 @@
             <ul>
                 <% products.forEach(p => { %> 
                     <li>
-                        <p><%= p.productData.title %> (<%= p.qty  %>)</p>
+                       <h1><%= p.title %></h1>
+                       <h2><%= Quantity: <%=p.cartItem.quantity %></h2>
                         <form action="/cart-delete-item" method="POST">
                             <input type="hidden" value="<%= p.productData.id %>" name="productId">
                             <button type="submit" class="btn">Delete</button>
