--- a/lab04/views/shop/cart.ejs
+++ b/lab04/views/shop/cart.ejs
@@ -12,11 +12,15 @@
                        <h1><%= p.title %></h1>
                        <h2><%= Quantity: <%=p.cartItem.quantity %></h2>
                         <form action="/cart-delete-item" method="POST">
-                            <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                            <input type="hidden" value="<%= p.id %>" name="productId">
                             <button type="submit" class="btn">Delete</button>
                         </form>
                     </li>
-                        
+                    <div class="centered">
+                        <form action="/create-order" method="POST">
+                            <button type="submit" class="btn">Order Now!</button>
+                        </form>
+                    </div> 
                 <% }) %> 
             </ul>
         <% } else { %> 
