--- a/lab08/public/css/main.css
+++ b/lab08/public/css/main.css
@@ -224,6 +224,19 @@ form {
   background: red;
   color: white;
 }
+.user-message{
+  margin: auto;
+  padding: 0.5rem;
+  width:90%;
+  border: 1px solid red;
+  border-radius:3px;
+  background-color:#b9c9ff;
+  text-align:center
+}
+.user-message--error{
+  border-color: red;
+  background-color:rgb(225, 75, 75)
+}
 
 @media (min-width: 768px) {
   .main-header__nav {
@@ -233,4 +246,8 @@ form {
   #side-menu-toggle {
     display: none;
   }
+  .user-message{
+    width: 30rem;
+  }
 }
+
