--- a/lab08/public/css/main.css
+++ b/lab08/public/css/main.css
@@ -43,7 +43,7 @@ form {
 .main-header__nav {
   height: 100%;
   width: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
 }
@@ -109,16 +109,23 @@ form {
   padding: 0;
 }
 
-.mobile-nav__item a {
+.mobile-nav__item a,
+.mobile-nav__item button {
+  font: inherit;
   text-decoration: none;
   color: black;
   font-size: 1.5rem;
   padding: 0.5rem 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
-.mobile-nav__item a.active {
+.mobile-nav__item a.active,
+.mobile-nav__item button:hover,
+.mobile-nav__item button:active {
   background: #00695c;
   color: white;
   border-radius: 3px;
@@ -224,18 +231,21 @@ form {
   background: red;
   color: white;
 }
-.user-message{
+
+.user-message {
   margin: auto;
+  width: 90%;
+  border: 1px solid #4771fa;
   padding: 0.5rem;
-  width:90%;
-  border: 1px solid red;
-  border-radius:3px;
-  background-color:#b9c9ff;
-  text-align:center
+  border-radius: 3px;
+  background: #b9c9ff;
+  text-align: center;
 }
-.user-message--error{
+
+.user-message--error {
   border-color: red;
-  background-color:rgb(225, 75, 75)
+  background: rgb(255, 176, 176);
+  color: red;
 }
 
 @media (min-width: 768px) {
@@ -246,8 +256,8 @@ form {
   #side-menu-toggle {
     display: none;
   }
-  .user-message{
+
+  .user-message {
     width: 30rem;
   }
 }
-
