--- a/lab08/views/auth/login.ejs
+++ b/lab08/views/auth/login.ejs
@@ -7,11 +7,9 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage) { %>
-            <div class="user-message user-message--error">
-                <%= errorMessage %>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-            </div>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
