--- a/lab08/views/auth/login.ejs
+++ b/lab08/views/auth/login.ejs
@@ -7,23 +7,23 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage) { %>
+        <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/login" method="POST" novalidate>
+        <form class="login-form" action="/login" method="POST">
             <div class="form-control">
-                <label for="email">Email</label>
+                <label for="email">E-Mail</label>
                 <input 
-                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : ''%>"
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
                     type="email" 
                     name="email" 
                     id="email" 
-                    value="<%= oldInput.email %>" >
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input 
-                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : ''%>"
+                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
                     type="password" 
                     name="password" 
                     id="password" 
@@ -32,5 +32,8 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
+        <div class="centered">
+            <a href="/reset">Reset Password</a>
+        </div>
     </main>
 <%- include('../includes/end.ejs') %>
