--- a/lab08/views/shop/index.ejs
+++ b/lab08/views/shop/index.ejs
@@ -4,7 +4,6 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
-
     <main>
         <% if (prods.length > 0) { %>
             <div class="grid">
@@ -22,21 +21,23 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <a href="/products/<%= product._id %>" class="btn">Details</a>
+                                <a href="/products/<%= product._id %>" class="btn">Details</a>
                             <% if (isAuthenticated) { %>
                                 <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                             <% } %>
                         </div>
                     </article>
                 <% } %>
-
             </div>
-            <section class="pagination">
-                <a href="/?page=1">1</a>
-                <a href="/?page=2">2</a>
-            </section>
+            <%- include('../includes/pagination.ejs', {
+                currentPage: currentPage,
+                nextPage: nextPage,
+                previousPage: previousPage,
+                hasNextPage: hasNextPage,
+                hasPreviousPage: hasPreviousPage
+            }) %>
+            
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
     </main>
-<%- include('../includes/end.ejs') %>
