--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,37 @@ a{
   text-decoration: none;
   color:rgb(228, 249, 255);
 }
+.login-form {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+  display: block;
+  padding-bottom: 20px;
+}
+.form-control {
+  margin: 1rem 0;
+}
+
+.form-control label,
+.form-control input,
+.form-control textarea {
+  display: block;
+  width: 100%;
+  margin-bottom: 0.25rem;
+}
+.logout:hover {
+  color: yellow;
+}
+
+
+.form-control input:focus{
+  outline-color: gray;
+}
+
+.form-control input.invalid,
+.form-control textarea.invalid {
+  border-color: red;
+}
 .form {
   border-radius: 5px;
   padding: 20px;
