--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,6 +6,7 @@
             <li class="main-header__item">
                 <a class="<%= path==='/' ? 'active' :'' %> " href='/'>TRANG CHỦ</a>
             </li>
+            <% if(isAuthenticated) { %>
             <li class="main-header__item">
                 <a class="<%= path === '/timekeeping' ? 'active' : '' %>" href="/timekeeping">CHẤM CÔNG</a>
             </li>
@@ -18,7 +19,20 @@
             <li class="main-header__item">
                 <a class="<%= path === '/covid' ? 'active' : '' %>" href="/covid">THÔNG TIN COVID</a>
             </li>
-           
+            <% } %>
+        </ul>
+        <ul class="main-header__item-list">
+            <% if(!isAuthenticated) { %>
+            <li class="main-header__item">
+                <a class="<% path==='/login'? 'active' : '' %>" href='/login'>ĐĂNG NHẬP</a>
+            </li>
+            <% } else { %>
+            <li class="main-header__item">
+                <form action="/logout" method="post">
+                    <button class="logout" type="submit">ĐĂNG XUẤT</button>
+                </form>
+            </li>
+            <% } %>
         </ul>
     </nav>
 </header>
