--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,7 +85,7 @@ a{
   border-radius: 10px;
   background-color: #6ebac6;
 }
-.btn-index:hover, a:hover{
+.btn-index:hover,.main-header__item-list a:hover{
   background-color: #201e48;
   color:#ffeb3b
 }
@@ -149,7 +149,12 @@ a{
 .main-header__item a.active {
   color: #ffeb3b;
 }
-
+.covid__btn{
+  color:#005d7d
+}
+.covid__btn:hover{
+  color: white
+}
 .mobile-nav {
   width: 30rem;
   height: 100vh;
