push app on github finish asm2

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,7 +5,7 @@
    <%- include('../includes/navigation.ejs') %>
     <div class="background">
     <main>
-        <h2>Vui long dang nhap truoc khi bat dau</h2>
+        <h1><i>Vui lòng đăng nhập trước khi bắt đầu...</i></h1>
         <% if(errorMessage){ %>
             <div class="user-message user-message--error">
                 <%= errorMessage %>
