--- a/views/staff/salary.ejs
+++ b/views/staff/salary.ejs
@@ -7,7 +7,7 @@
                 <main>
                     <div class="salary">
                         <div class="form">
-                            <h2>Salary</h2>
+                            <h2>Lương</h2>
                             <form action="/month-salary" method="POST">
                                 <label for="month">Chọn tháng: </label>
                                 <input type="month" name="month" id="month">
