--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,8 +57,10 @@ a{
   width: 100%;
   margin-bottom: 0.25rem;
 }
-.logout:hover {
-  color: yellow;
+.logout {
+  color: black;
+  background-color:white;
+  border: none;
 }
 
 
@@ -158,7 +160,7 @@ a{
 .mobile-nav {
   width: 30rem;
   height: 100vh;
-  max-width: 90%;
+  max-width: 80%;
   position: fixed;
   left: 0;
   top: 0;
@@ -166,7 +168,7 @@ a{
   z-index: 10;
   padding: 2rem 1rem 1rem 2rem;
   transform: translateX(-100%);
-  transition: transform 0.3s ease-out;
+  transition: transform 0.5s ease-out;
 }
 
 .mobile-nav.open {
@@ -190,7 +192,7 @@ a{
   text-transform: uppercase;
 }
 
-.mobile-nav__item:hover {
+.mobile-nav__item:hover, logout:hover {
   background: rgb(168, 168, 168);
 }
 
@@ -330,7 +332,7 @@ button#btn-end {
 
 .user-message {
   margin: auto;
-  width: 90%;
+  width: 50%;
   border: 1px solid #4771fa;
   padding: 0.5rem;
   border-radius: 3px;
@@ -339,6 +341,12 @@ button#btn-end {
 }
 
 .user-message--error {
+  margin: auto;
+  width: 50%;
+  border: 1px solid #4771fa;
+  padding: 0.5rem;
+  border-radius: 3px;
+  text-align: center;
   border-color: red;
   background: rgb(255, 176, 176);
   color: red;
@@ -428,14 +436,29 @@ input#positive {
 input#negative {
   width: 50px;
 }
-
+.pagination {
+  padding-bottom: 2rem;
+  text-align: center;
+}
+.pagination a {
+ 
+  padding: 0.2rem 1rem;
+  text-decoration: none;
+  font: inherit;
+  border: 1px solid #005d7d;
+  color: #005d7d;
+  background: white;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 10px;
+}
+.pagination a:hover,
+.pagination a:active {
+    background-color: #201e48;
+    color: white;
+}
 @media (min-width: 768px) {
 
-  main {
-    width: 80%;
-    padding: 1rem;
-    margin: auto;
-  }
   
   .main-header__nav {
     display: flex;
@@ -462,4 +485,7 @@ input#negative {
     margin: 10px 10px;
   };
 
+}
+.logout:hover {
+  color: yellow;
 }
